bugfix in fullscreen-button shift

--- a/src/app/components/ebv-selection/ebv-selection.component.scss
+++ b/src/app/components/ebv-selection/ebv-selection.component.scss
@@ -19,7 +19,7 @@
     }
 
     mat-card-actions {
-        transform: translate(-100%, -7%);
+        transform: translate(-100%, -1rem);
     }
 
     mat-spinner {
